# TestTask

./: CMakeLists.txt
include/: db_manager.h  imagecomparator.h  mainwindow.h  screen_capture.h  screenshot_comparison_widget.h
src/: db_manager.cpp  imagecomparator.cpp  main.cpp  mainwindow.cpp  screen_capture.cpp  screenshot_comparison_widget.cpp
ui/: mainwindow.ui  screenshot_comparison_widget.ui
